[gd_scene load_steps=4 format=3 uid="uid://qrh7v3mee2ao"]

[ext_resource type="Theme" uid="uid://do36jrxowl4gq" path="res://themes/papertheme.tres" id="1_6ek54"]
[ext_resource type="PackedScene" uid="uid://s53h2f3swdrw" path="res://scenes/card/card.tscn" id="1_nrmy2"]
[ext_resource type="Script" path="res://scenes/deckbuilder.gd" id="2_bu6d7"]

[node name="Deckbuilder" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_6ek54")
script = ExtResource("2_bu6d7")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PreviewCard" parent="." instance=ExtResource("1_nrmy2")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.09
anchor_top = 0.5
anchor_right = 0.09
anchor_bottom = 0.5
offset_left = -49.68
offset_top = -75.0
offset_right = 50.32
offset_bottom = 75.0
grow_vertical = 2
scale = Vector2(2, 2)
scale_manip = 1.0

[node name="Split" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.400009
offset_top = 88.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 120

[node name="Main Deck" type="ScrollContainer" parent="Split"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3

[node name="Margin" type="MarginContainer" parent="Split/Main Deck"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4

[node name="MaindeckList" type="HFlowContainer" parent="Split/Main Deck/Margin"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_6ek54")
theme_override_constants/h_separation = 6
theme_override_constants/v_separation = 6

[node name="Side Deck" type="ScrollContainer" parent="Split"]
unique_name_in_owner = true
visible = false
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3

[node name="Margin" type="MarginContainer" parent="Split/Side Deck"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4

[node name="SidedeckList" type="HFlowContainer" parent="Split/Side Deck/Margin"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_6ek54")
theme_override_constants/h_separation = 6
theme_override_constants/v_separation = 6

[node name="CardBrowser" type="PanelContainer" parent="Split"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="CardBrowserList" type="ScrollContainer" parent="Split/CardBrowser"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3

[node name="Margin" type="MarginContainer" parent="Split/CardBrowser/CardBrowserList"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4

[node name="Allcards" type="HFlowContainer" parent="Split/CardBrowser/CardBrowserList/Margin"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_6ek54")

[node name="ButtonsNStuff" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 85.0
grow_horizontal = 2

[node name="CardName" type="Label" parent="ButtonsNStuff"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -322.0
offset_top = 6.0
offset_right = -256.0
offset_bottom = 23.0
grow_horizontal = 0
text = "Card Name:"

[node name="NameEdit" type="LineEdit" parent="ButtonsNStuff"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -256.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = 26.0
grow_horizontal = 0

[node name="CostType" type="Label" parent="ButtonsNStuff"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -193.0
offset_top = 32.0
offset_right = -132.0
offset_bottom = 49.0
grow_horizontal = 0
text = "Cost Type:"

[node name="Cost" type="OptionButton" parent="ButtonsNStuff"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -130.0
offset_top = -55.0
offset_right = -4.0
offset_bottom = -33.0
grow_horizontal = 0
grow_vertical = 0
item_count = 7
selected = 0
popup/item_0/text = "Any"
popup/item_0/id = 0
popup/item_1/text = "Blood"
popup/item_1/id = 1
popup/item_2/text = "Bones"
popup/item_2/id = 2
popup/item_3/text = "Energy"
popup/item_3/id = 3
popup/item_4/text = "Magick"
popup/item_4/id = 4
popup/item_5/text = "Heat"
popup/item_5/id = 5
popup/item_6/text = "Runes"
popup/item_6/id = 6

[node name="Search" type="Button" parent="ButtonsNStuff"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -85.0
offset_top = -27.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 0
grow_vertical = 0
text = "Search"

[node name="ModeSelect" type="TabBar" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 28.0
offset_top = 58.0
offset_right = 479.0
offset_bottom = 87.0
theme = ExtResource("1_6ek54")
scrolling_enabled = false
tab_count = 3
tab_0/title = "Main Deck"
tab_1/title = "Side Deck"
tab_2/title = "Scrybe"

[node name="ScrybeSelect" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 87.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="ButtonsNStuff/Search" to="." method="_on_search_pressed"]
[connection signal="tab_changed" from="ModeSelect" to="." method="_on_mode_select_tab_changed"]
